force-app/main/default/objects/Candidate_on_list__c/Candidate_on_list__c.object-meta.xml
<CustomObject>
    <label>Kandidat op liste</label>
    <nameField>
        <label>Candidate on list Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kandidat på lister</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>