force-app/main/default/objects/Candidate_on_list__c/fields/Candidate_on_list_18_digit_id__c.field-meta.xml
<CustomField>
    <fullName>Candidate_on_list_18_digit_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate on list 18 digit id</label>
    <type>Text</type>
</CustomField>