force-app/main/default/objects/Candidate_on_list__c/fields/CandidateListID__c.field-meta.xml
<CustomField>
    <fullName>CandidateListID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CandidateListID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>