force-app/main/default/objects/Candidate_on_list__c/fields/Candidatelistnumber__c.field-meta.xml
<CustomField>
    <fullName>Candidatelistnumber__c</fullName>
    <externalId>true</externalId>
    <label>Candidatelistnumber</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>