force-app/main/default/objects/Candidate_on_list__c/fields/Copy_of_notes__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_notes__c</fullName>
    <label>Copy of notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>