force-app/main/default/objects/Candidate_on_list__c/fields/Date_added_to_list__c.field-meta.xml
<CustomField>
    <fullName>Date_added_to_list__c</fullName>
    <label>Date added to list</label>
    <type>Date</type>
</CustomField>