force-app/main/default/objects/Candidate_on_list__c/fields/Desc__c.field-meta.xml
<CustomField>
    <fullName>Desc__c</fullName>
    <inlineHelpText>Notatfelt om kandidaten</inlineHelpText>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>