force-app/main/default/objects/Candidate_on_list__c/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <label>List</label>
    <referenceTo>List__c</referenceTo>
    <relationshipLabel>Candidate on list</relationshipLabel>
    <relationshipName>Candidate_on_list</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>