force-app/main/default/objects/Candidate_on_list__c/fields/ListCandidateID__c.field-meta.xml
<CustomField>
    <fullName>ListCandidateID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ListCandidateID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>