force-app/main/default/objects/Candidate_on_list__c/fields/Position_ID__c.field-meta.xml
<CustomField>
    <fullName>Position_ID__c</fullName>
    <label>Position ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>