force-app/main/default/objects/Candidate_on_list__c/fields/RemoveListFromPdf__c.field-meta.xml
<CustomField>
    <fullName>RemoveListFromPdf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove List From Pdf</label>
    <type>Checkbox</type>
</CustomField>